tests/ui/traits/next-solver/opaques/dont-type_of-tait-in-defining-scope.is_send.stderr
error[E0284]: type annotations needed: cannot satisfy `Foo == _`
  --> $DIR/dont-type_of-tait-in-defining-scope.rs:16:18
   |
LL |     needs_send::<Foo>();
   |                  ^^^ cannot satisfy `Foo == _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
